# omp-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
release/: RELEASE_NOTES.md
src/: App.css  App.tsx  Icon.tsx  ModelPicker.tsx  SettingsPanel.tsx  TerminalView.tsx  api.ts  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  omp_bridge.rs  sessions.rs  settings.rs  terminal.rs
