[package]
name = "omp-desktop"
version = "0.1.4"
description = "Cross-platform desktop client for Oh My Pi"
authors = ["OMP Desktop contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-clipboard-manager = "2.3.2"
base64 = "0.22"
portable-pty = "0.9.0"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
rand = "0.8"
filetime = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1.3.0"
